# CyberAssessor

./: .gitignore  README.md  build_overview_deck.py  eval_rule_no_evidence_audit.json  eval_v1.json  package.json  pnpm-lock.yaml
backend/: alembic.ini  cosmic-ray-rules.toml  cosmic-ray-supersession.toml  cosmic-ray.toml  cybersec-server.spec  cybersec_server_entry.py  probe_gateway_openai.py  probe_gateway_usage.py  pyproject.toml
backend/cybersecurity_assessor/: __init__.py  __main__.py  cli.py  config.py  db.py  migrations.py  models.py  server.py  tls.py
backend/cybersecurity_assessor/alembic/: env.py  script.py.mako
backend/cybersecurity_assessor/baselines/: __init__.py  base.py  ccis_workbook.py  crm_xlsx.py  oscal_adds.py  other_xlsx.py  overlay_classifier.py  scope_labels.py
backend/cybersecurity_assessor/catalogs/: __init__.py  cis_v8_loader.py  crosswalk_loader.py  crosswalk_resolver.py  csf_loader.py  disa_cci_loader.py  fedramp_profile_loader.py  iso27001_loader.py  oscal_loader.py  pci_dss_loader.py  program_controls_loader.py  soc2_loader.py  sp800_171_loader.py
backend/cybersecurity_assessor/controls/: EXPORT_DESIGN.md  __init__.py  exporter.py  odp_render.py
backend/cybersecurity_assessor/engine/: CRM_SANITY_DESIGN.md  ML_ARCHITECTURE.md  __init__.py  assessor.py  calibration.py  crm_backfill.py  crm_context.py  crm_ml.py  crm_sanity.py  decision_cache.py  evidence_bundle.py  evidence_ranker.py  finding_corroboration.py  impl_persistence.py  inputs.py  invalidation.py  measurement.py  narrative_embeddings.py  override_epoch.py  rules.py  supersession.py  sweep_online.py  validator.py  workbook_sync.py
backend/cybersecurity_assessor/evidence/: __init__.py  asset_crosscheck.py  evidence_retention.py  ingest.py  jobs.py  scheduler.py  scope_backfill.py  supersession_tracker.py  tagger.py
backend/cybersecurity_assessor/excel/: __init__.py  ccis_reader.py  ccis_validator.py  ccis_writer.py  narrative_importer.py  working_copy.py  xlsx_surgery.py
backend/cybersecurity_assessor/llm/: _rate_limit.py  client.py  extractor.py  pricing.py
backend/cybersecurity_assessor/metrics/: __init__.py  references.py
backend/cybersecurity_assessor/poam/: __init__.py  exporter.py  generator.py  importer.py  residual_advisor.py  risk.py  template.py
backend/cybersecurity_assessor/reports/: SAR_DESIGN.md  __init__.py  sar.py
backend/cybersecurity_assessor/routes/: _batch_progress.py  archer.py  automation.py  baselines.py  boundary_sweep.py  calibration.py  catalog.py  confluence.py  controls.py  emass.py  evidence.py  gitlab.py  jira.py  metrics.py  poams.py  reports.py  runs.py  scope.py  servicenow_grc.py  settings.py  sharepoint.py  splunk.py  stig.py  supersession.py  system_context.py  tenable.py  workbooks.py
backend/cybersecurity_assessor/scripts/: __main__.py  eval_score.py
backend/cybersecurity_assessor/sources/: __init__.py  emass.py
backend/cybersecurity_assessor/system_context/: __init__.py  base.py  boundary_docs.py  brief.py  freeform.py
backend/scripts/: build-sidecar.ps1  build_demo_workbook.py  diag_t1tl_loader.py  recalibrate_sweep_weights.py  refit_crm_anomaly_model.py  smoke_test_sidecar.py
backend/tests/: test_framework_parent_chain.py  test_migration_0016_assessment_dedup.py  test_packaged_sidecar.py  test_program_controls_loader.py  test_sweep_fingerprint.py
backend/tests/baselines/: test_ccis_workbook_odp_ingest.py  test_overlay_classifier.py
backend/tests/catalogs/: test_cis_v8_loader.py  test_crosswalk_resolver.py  test_csf_loader.py  test_fedramp_profile_loader.py  test_iso27001_loader.py  test_pci_dss_loader.py  test_soc2_loader.py  test_sp800_171_loader.py
backend/tests/controls/: conftest.py  test_export_endpoints.py  test_exporter_emass.py  test_exporter_working.py  test_odp_render.py  test_rollup_status.py
backend/tests/engine/: test_assessor_dualscope_crm.py  test_assessor_e2e.py  test_assessor_evidence_chain_hits.py  test_assessor_logs_short_circuits.py  test_assessor_multiscope_masking.py  test_assessor_no_evidence_short_circuit.py  test_assessor_outcome_branches.py  test_assessor_uses_chain_index.py  test_assessor_v02_gates.py  test_audit_v1_citations.py  test_automation_schedule.py  test_corroboration_chunking.py  test_crm_backfill.py  test_crm_context.py  test_crm_context_edges.py  test_crm_ml_anomaly.py  test_crm_ml_features.py  test_crm_sanity_heuristics.py  test_crm_sanity_hybrid_blend.py  test_crm_suspicion_endpoint.py  test_evidence_block_builder.py  test_evidence_bundle.py  test_evidence_chain_index_equivalence.py  test_evidence_chain_rewriter.py  test_evidence_retention_scale.py  test_finding_corroboration_regressions.py  test_impl_persistence_edges.py  test_invalidation.py  test_kernel_config_fingerprint.py  test_load_snippet_boundary_regressions.py  test_measurement.py  test_multi_impl_cascade.py  test_narrative_embeddings.py  test_plan_implementations_boundary.py  test_recorder_crm_short_circuit_count.py  test_rules_golden.py  test_stitch_scope_narrative.py  test_supersession_golden.py  test_validator_embedding_fallback.py  test_validator_golden.py  (+1 more)
backend/tests/evidence/: test_asset_crosscheck.py  test_asset_inventory_autotag.py  test_cci_column_autotag.py  test_extractors_robust.py  test_folder_tool_floor.py  test_ingest_concurrency.py  test_ingest_skip.py  test_ingest_truncation.py  test_judge_escalation.py  test_poam_training_autotag.py  test_servicenow_grc.py  test_splunk_source.py  test_supersession_tracker.py  test_sweep_decisions_endpoint.py  test_sweep_edges.py  test_sweep_online_update.py  test_sweep_pre_credit.py  test_sweep_scoring.py  test_sweep_weights_loader.py  test_tool_name_autotag.py
backend/tests/excel/: test_ccis_reader_assignment_values.py  test_ccis_writer_insert.py  test_reader_reread.py  test_working_copy_guards.py  test_writer_safety.py  test_xlsx_surgery.py
backend/tests/fixtures/: build_demo_ccis.py  demo_ccis.xlsx  test_demo_ccis.py
backend/tests/llm/: test_residual_advisor.py
backend/tests/poam/: conftest.py  test_generator.py  test_generator_description.py  (+4 more)
(+405 files in other folders)
