[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybersecurity-assessor"
version = "2.0.0"
description = "Standalone NIST 800-53 control assessor — FastAPI sidecar for the Electron UI."
authors = [{ name = "Noah Jaskolski", email = "noah@nuon.ai" }]
license = { text = "Proprietary — internal use only" }
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # Web sidecar
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",

  # Persistence
  "sqlmodel>=0.0.22",
  "alembic>=1.13",

  # Excel — openpyxl reads workbooks and builds new ones; writes to existing
  # .xlsx files go through cybersecurity_assessor.excel.xlsx_surgery (pure-
  # Python zip surgery that preserves comments, data validation, conditional
  # formatting, merged cells, etc. without requiring Excel COM).
  "openpyxl>=3.1",

  # Doc extraction —
  # Three-stage PDF pipeline (see evidence/extractors/pdf.py):
  #   1. pdfplumber  — primary; best layout/table handling for born-digital PDFs
  #   2. pypdf       — fallback for permission-flagged / malformed-xref PDFs
  #                    (most DoD-signed policy docs land here)
  #   3. OCR         — last resort for scan-only PDFs (image-of-text, no text
  #                    layer). pypdfium2 renders pages to PIL images, pytesseract
  #                    wraps the Tesseract binary. Tesseract itself must be
  #                    installed separately (UB-Mannheim Windows MSI, per-user,
  #                    no admin needed). The extractor detects its absence and
  #                    degrades gracefully — extraction returns empty text
  #                    rather than crashing.
  "pdfplumber>=0.11",
  "pypdf>=5.1",
  "pypdfium2>=4.30",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "pytesseract>=0.3.13",
  # Pillow — raster decode for the image extractor (OCR + dimensions/EXIF) and
  # the PDF OCR render path. Was previously only pulled in transitively via
  # pdfplumber; declared explicitly now that image.py depends on it directly.
  "pillow>=10.4",

  # LLM — Anthropic is the primary provider (prompt caching, cheaper for our
  # ~3-4k cached system prompt). OpenAI is included as a user-selectable
  # alternate so the assessor can flip providers from Settings without a
  # redeploy (handy when one provider is rate-limited / down / blocked by a
  # corporate egress policy).
  "anthropic>=0.39",
  "openai>=1.50",

  # PDF reporting
  "reportlab>=4.2",

  # Secrets
  "keyring>=25.5",

  # TLS — use OS-native trust store so corporate root CAs (IT-deployed)
  # are honored without app-side configuration.
  "truststore>=0.10",

  # Misc utilities
  "rich>=13.9",
  "typer>=0.13",
  "tomli-w>=1.0",
  "lxml>=5.3",
  # Safe XML parsing for STIG/SCAP/Nessus extractors — without this the
  # CKL/XCCDF/Nessus paths raise ExtractorError on first use.
  "defusedxml>=0.7",

  # ML — runtime for the online SGD sweep-weight updater and the
  # CRM-anomaly IsolationForest scorer. All training is lazy (loaded
  # on the first fit/score call), so the sidecar's cold-start cost is
  # numpy only. See engine/ML_ARCHITECTURE.md for the train/serve split.
  "scikit-learn>=1.5",
  "numpy>=1.26",
  "joblib>=1.4",
]

[project.optional-dependencies]
# Legacy COM-based Excel bridge — retained for the few code paths and
# regression tests that still want to drive a live Excel app. The production
# write path uses xlsx_surgery (pure Python, no Excel required), so this is
# strictly opt-in.
excel = [
  "xlwings>=0.32",
  "pywin32>=308; platform_system == 'Windows'",
]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  # v0.2 kernel-hardening: property-based + mutation testing for the
  # three deterministic modules (validator, supersession, rules) whose
  # bugs silently corrupt assessments.
  #   - Hypothesis fuzzes the input space so an example-only suite can't
  #     pass with weak assertions on hand-picked cases. Runs in seconds;
  #     wired into the standard pytest run on every CI invocation.
  #   - cosmic-ray proves the suite would actually fail when the kernel
  #     is mutated (assertion-quality verification, not just coverage).
  #     Replaces mutmut, which dropped native Windows support at 3.x and
  #     would have required WSL — incompatible with the cross-platform-
  #     native posture. cosmic-ray is pure Python and works on Windows,
  #     macOS, and Linux out of the box. Not on CI (full sweep is slow
  #     by nature of mutation testing); manual invocation before kernel-
  #     version bumps. See cosmic-ray.toml for the kill-confirmation
  #     test set (the *_golden tests plus test_properties.py).
  "hypothesis>=6.115",
  "cosmic-ray>=8.3",
]
sources = [
  # External-system connectors (gated behind config)
  "msal>=1.31",
  # Microsoft Graph HTTP calls in evidence/sources/sharepoint.py — kept as a
  # plain `requests` dep so we don't pull a second HTTP stack just for Graph.
  # (Office365-REST-Python-Client is the legacy SP REST client; retained for
  # any code paths we haven't yet ported off it.)
  "requests>=2.32",
  "Office365-REST-Python-Client>=2.5",
  "pyTenable>=1.5",
  # Splunk saved-search connector (v0.4) — evidence/sources/splunk.py.
  # Official Splunk SDK; pulled in only when the optional `sources`
  # extras are installed so a default sidecar build doesn't ship the
  # HTTP/auth scaffolding for Splunk it never uses.
  "splunk-sdk>=1.7",
  # GitLab v4 REST client for evidence/sources/gitlab.py. Pure-Python wheel,
  # no native deps. Used only when AppConfig.enable_gitlab is true.
  "python-gitlab>=4.4",
  # Confluence Data Center REST client. Used by
  # evidence/sources/confluence.py — gated behind the v0.4 connector
  # wave flag AND a per-connector "upcoming" flag, so the dep is only
  # consumed when both gates are flipped on. PAT (Bearer) auth via the
  # library's ``token=`` kwarg; we never use Basic auth here.
  "atlassian-python-api>=3.41",
]
# NOTE: the `offline-embeddings` extra (sentence-transformers) is documented
# in engine/CRM_SANITY_DESIGN.md as a future opt-in but is intentionally not
# declared here yet — sentence-transformers pulls torch + a CUDA wheel chain
# that fails universal resolution against the internal package mirror. The
# narrative-embeddings module ships with an OpenAI provider and a TF-IDF
# fallback; users who need air-gapped embeddings can `pip install
# sentence-transformers` into their venv on top of the sidecar.

[project.scripts]
cybersec = "cybersecurity_assessor.cli:app"
cybersec-server = "cybersecurity_assessor.server:run"
# Ops tool for stepping the user's ~/.cybersecurity-assessor/assessor.sqlite
# forward without launching the app. The sidecar runs the same
# upgrade_to_head() on every boot, so end users never need this — it exists
# for dev debugging and for the v0.x → Alembic cutover where a stale dev DB
# may need a one-shot wipe-and-reseed.
cybersec-migrate = "cybersecurity_assessor.migrations:cli"

[tool.hatch.build.targets.wheel]
packages = ["cybersecurity_assessor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["../tests"]
markers = [
    "requires_excel: test requires Excel desktop app + xlwings COM bridge (install with `pip install -e .[excel]`; skipped in CI)",
    "live_llm: runs eval cases against a real LLM endpoint (requires API key; opt-in via `pytest -m live_llm`; skipped in default CI)",
]
filterwarnings = [
    # Benign: SQLAlchemy cannot reflect SQLite expression-based indexes. The
    # schema-equivalence test only compares table/column structure, so the
    # skipped index reflection is expected and harmless.
    "ignore:.*skipped unsupported reflection of expression-based index.*",
    # Benign: Python 3.12 stdlib deprecated the implicit sqlite3 date/datetime
    # adapters. This is library/stdlib behavior, not our code; suppress so it
    # does not drown out signal in the test run.
    "ignore:.*default (date|datetime) adapter is deprecated.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
